Source/Alternet.UI.Pal/Api/TextBoxTextAttr.Api.h

ALTERNET_UI_API TextBoxTextAttr* TextBoxTextAttr_Create_()
{
    return MarshalExceptions<TextBoxTextAttr*>([&](){
        return new TextBoxTextAttr();
    });
}
ALTERNET_UI_API void TextBoxTextAttr_Delete_(void* attr)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::Delete(attr);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_DeleteRichTextAttr_(void* attr)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::DeleteRichTextAttr(attr);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_Copy_(void* toAttr, void* fromAttr)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::Copy(toAttr, fromAttr);
    });
}
ALTERNET_UI_API void* TextBoxTextAttr_CreateTextAttr_()
{
    return MarshalExceptions<void*>([&](){
        return TextBoxTextAttr::CreateTextAttr();
    });
}
ALTERNET_UI_API void* TextBoxTextAttr_CreateRichTextAttr_()
{
    return MarshalExceptions<void*>([&](){
        return TextBoxTextAttr::CreateRichTextAttr();
    });
}
ALTERNET_UI_API void* TextBoxTextAttr_RichGetTextBoxAttr_(void* attr)
{
    return MarshalExceptions<void*>([&](){
        return TextBoxTextAttr::RichGetTextBoxAttr(attr);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetTextColor_(void* attr, Color colText)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetTextColor(attr, colText);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetBackgroundColor_(void* attr, Color colBack)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetBackgroundColor(attr, colBack);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetAlignment_(void* attr, int alignment)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetAlignment(attr, alignment);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetFontPointSize_(void* attr, int pointSize)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetFontPointSize(attr, pointSize);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetFontStyle_(void* attr, int fontStyle)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetFontStyle(attr, fontStyle);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetFontWeight_(void* attr, int fontWeight)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetFontWeight(attr, fontWeight);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetFontFaceName_(void* attr, const char16_t* faceName)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetFontFaceName(attr, faceName);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetFontUnderlined_(void* attr, c_bool underlined)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetFontUnderlined(attr, underlined);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetFontUnderlinedEx_(void* attr, int type, Color colour)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetFontUnderlinedEx(attr, type, colour);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetFontStrikethrough_(void* attr, c_bool strikethrough)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetFontStrikethrough(attr, strikethrough);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetFontFamily_(void* attr, int family)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetFontFamily(attr, family);
    });
}
ALTERNET_UI_API Color_C TextBoxTextAttr_GetTextColor_(void* attr)
{
    return MarshalExceptions<Color_C>([&](){
        return TextBoxTextAttr::GetTextColor(attr);
    });
}
ALTERNET_UI_API Color_C TextBoxTextAttr_GetBackgroundColor_(void* attr)
{
    return MarshalExceptions<Color_C>([&](){
        return TextBoxTextAttr::GetBackgroundColor(attr);
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetAlignment_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetAlignment(attr);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetURL_(void* attr, const char16_t* url)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetURL(attr, url);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetFlags_(void* attr, int64_t flags)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetFlags(attr, flags);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetParagraphSpacingAfter_(void* attr, int spacing)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetParagraphSpacingAfter(attr, spacing);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetParagraphSpacingBefore_(void* attr, int spacing)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetParagraphSpacingBefore(attr, spacing);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetLineSpacing_(void* attr, int spacing)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetLineSpacing(attr, spacing);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetBulletStyle_(void* attr, int style)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetBulletStyle(attr, style);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetBulletNumber_(void* attr, int n)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetBulletNumber(attr, n);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetBulletText_(void* attr, const char16_t* text)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetBulletText(attr, text);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetPageBreak_(void* attr, c_bool pageBreak)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetPageBreak(attr, pageBreak);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetCharacterStyleName_(void* attr, const char16_t* name)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetCharacterStyleName(attr, name);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetParagraphStyleName_(void* attr, const char16_t* name)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetParagraphStyleName(attr, name);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetListStyleName_(void* attr, const char16_t* name)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetListStyleName(attr, name);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetBulletFont_(void* attr, const char16_t* bulletFont)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetBulletFont(attr, bulletFont);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetBulletName_(void* attr, const char16_t* name)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetBulletName(attr, name);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontSize_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontSize(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontPointSize_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontPointSize(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontPixelSize_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontPixelSize(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontItalic_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontItalic(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontUnderlined_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontUnderlined(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontStrikethrough_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontStrikethrough(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontFaceName_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontFaceName(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontEncoding_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontEncoding(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontFamily_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontFamily(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFont_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFont(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasParagraphSpacingAfter_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasParagraphSpacingAfter(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasParagraphSpacingBefore_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasParagraphSpacingBefore(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasLineSpacing_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasLineSpacing(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasCharacterStyleName_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasCharacterStyleName(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasParagraphStyleName_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasParagraphStyleName(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasListStyleName_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasListStyleName(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasBulletStyle_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasBulletStyle(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasBulletNumber_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasBulletNumber(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasBulletText_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasBulletText(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasBulletName_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasBulletName(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasURL_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasURL(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasPageBreak_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasPageBreak(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasTextEffects_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasTextEffects(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasTextEffect_(void* attr, int effect)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasTextEffect(attr, effect);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasOutlineLevel_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasOutlineLevel(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFlag_(void* attr, int64_t flag)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFlag(attr, flag);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_RemoveFlag_(void* attr, int64_t flag)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::RemoveFlag(attr, flag);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_AddFlag_(void* attr, int64_t flag)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::AddFlag(attr, flag);
    });
}