Source/Alternet.UI/Native/TextBoxTextAttr.Generated.cs

        
        public static bool HasFontSize(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasFontSize_(attr);
        }
        
        public static bool HasFontPointSize(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasFontPointSize_(attr);
        }
        
        public static bool HasFontPixelSize(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasFontPixelSize_(attr);
        }
        
        public static bool HasFontItalic(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasFontItalic_(attr);
        }
        
        public static bool HasFontUnderlined(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasFontUnderlined_(attr);
        }
        
        public static bool HasFontStrikethrough(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasFontStrikethrough_(attr);
        }
        
        public static bool HasFontFaceName(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasFontFaceName_(attr);
        }
        
        public static bool HasFontEncoding(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasFontEncoding_(attr);
        }
        
        public static bool HasFontFamily(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasFontFamily_(attr);
        }
        
        public static bool HasFont(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasFont_(attr);
        }
        
        public static bool HasParagraphSpacingAfter(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasParagraphSpacingAfter_(attr);
        }
        
        public static bool HasParagraphSpacingBefore(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasParagraphSpacingBefore_(attr);
        }
        
        public static bool HasLineSpacing(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasLineSpacing_(attr);
        }
        
        public static bool HasCharacterStyleName(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasCharacterStyleName_(attr);
        }
        
        public static bool HasParagraphStyleName(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasParagraphStyleName_(attr);
        }
        
        public static bool HasListStyleName(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasListStyleName_(attr);
        }
        
        public static bool HasBulletStyle(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasBulletStyle_(attr);
        }
        
        public static bool HasBulletNumber(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasBulletNumber_(attr);
        }
        
        public static bool HasBulletText(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasBulletText_(attr);
        }
        
        public static bool HasBulletName(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasBulletName_(attr);
        }
        
        public static bool HasURL(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasURL_(attr);
        }
        
        public static bool HasPageBreak(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasPageBreak_(attr);
        }
        
        public static bool HasTextEffects(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasTextEffects_(attr);
        }
        
        public static bool HasTextEffect(System.IntPtr attr, int effect)
        {
            return NativeApi.TextBoxTextAttr_HasTextEffect_(attr, effect);
        }
        
        public static bool HasOutlineLevel(System.IntPtr attr)
        {
            return NativeApi.TextBoxTextAttr_HasOutlineLevel_(attr);
        }
        
        public static bool HasFlag(System.IntPtr attr, long flag)
        {
            return NativeApi.TextBoxTextAttr_HasFlag_(attr, flag);
        }
        
        public static void RemoveFlag(System.IntPtr attr, long flag)
        {
            NativeApi.TextBoxTextAttr_RemoveFlag_(attr, flag);
        }
        
        public static void AddFlag(System.IntPtr attr, long flag)
        {
            NativeApi.TextBoxTextAttr_AddFlag_(attr, flag);
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr TextBoxTextAttr_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_Delete_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_DeleteRichTextAttr_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_Copy_(System.IntPtr toAttr, System.IntPtr fromAttr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr TextBoxTextAttr_CreateTextAttr_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr TextBoxTextAttr_CreateRichTextAttr_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr TextBoxTextAttr_RichGetTextBoxAttr_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetTextColor_(System.IntPtr attr, NativeApiTypes.Color colText);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetBackgroundColor_(System.IntPtr attr, NativeApiTypes.Color colBack);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetAlignment_(System.IntPtr attr, int alignment);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontPointSize_(System.IntPtr attr, int pointSize);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontStyle_(System.IntPtr attr, int fontStyle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontWeight_(System.IntPtr attr, int fontWeight);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontFaceName_(System.IntPtr attr, string faceName);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontUnderlined_(System.IntPtr attr, bool underlined);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontUnderlinedEx_(System.IntPtr attr, int type, NativeApiTypes.Color colour);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontStrikethrough_(System.IntPtr attr, bool strikethrough);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontFamily_(System.IntPtr attr, int family);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color TextBoxTextAttr_GetTextColor_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color TextBoxTextAttr_GetBackgroundColor_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetAlignment_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetURL_(System.IntPtr attr, string url);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFlags_(System.IntPtr attr, long flags);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetParagraphSpacingAfter_(System.IntPtr attr, int spacing);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetParagraphSpacingBefore_(System.IntPtr attr, int spacing);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetLineSpacing_(System.IntPtr attr, int spacing);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetBulletStyle_(System.IntPtr attr, int style);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetBulletNumber_(System.IntPtr attr, int n);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetBulletText_(System.IntPtr attr, string text);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetPageBreak_(System.IntPtr attr, bool pageBreak);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetCharacterStyleName_(System.IntPtr attr, string name);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetParagraphStyleName_(System.IntPtr attr, string name);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetListStyleName_(System.IntPtr attr, string name);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetBulletFont_(System.IntPtr attr, string bulletFont);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetBulletName_(System.IntPtr attr, string name);
